# claude-mcp-agent

./: .coverage  .cursorrules  .env.example  .flake8  README.md  ROADMAP.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
clade_mcp_agent/: __init__.py  __main__.py  agent.py  claude_client.py  config.py  config_handler.py  logging.py  mcp_client.py  state.py
tests/: __init__.py  conftest.py  test_config.py  test_config_handler.py  test_logging.py  test_placeholder.py  test_state.py
tests/data/: test_config.json
