[tool.poetry]
name = "clade-mcp-agent"
version = "0.1.0"
description = "Python agent for interacting with Claude and multiple MCP servers"
authors = ["Adam Holsinger <adamholsinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.7.7"
aiohttp = "^3.9.1"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-quotes = "^3.3.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["clade_mcp_agent"]

[tool.coverage.report]
show_missing = true
